# STM32L432KC-Projects

./: .bashrc  .cproject  .project  CMakeCache.txt  CMakeLists.txt  STM32L432KC.launch  STM32L432KCUX_FLASH.ld
Application/SDCard/: sd_driver.c  user_diskio_spi.c
Application/Wavelet_Analysis/Inc/: cwt.h  scales.h  signals.h  wavelet.h
Application/Wavelet_Analysis/Src/: cwt.c  scales.c  signals.c  wavelet.c
Core/Inc/: main.h
Core/Src/: Blinking_HW_Delay.c  Blinking_TIM_delay.c  DANIEL_MANDA_Y.c  RX_data_with_interrupts.c  SD_writing.c  SPI_TX_to_shift_register.c  UART_DMA.c  UART_echo.c  blinking_led.c  control_led_brightness.c  control_led_with_interrupt.c  cwt_probe.c  fft_prueba.c  frequencymeter.c  plotting_with_Arduino_Serial_Plotter.c  printf_probe.c  printf_probe2.c  printf_redirect.c  probe_f32_TYPE.c  rgb_led_ADC_DMA_PWM_control.c
Debug/: Blinking_HW_Delay.i  Blinking_HW_Delay.s  Blinking_TIM_delay.i  Blinking_TIM_delay.s  DANIEL_MANDA_Y.i  DANIEL_MANDA_Y.s  RX_data_with_interrupts.i  RX_data_with_interrupts.s  SD_writing.i  SD_writing.s  SPI_TX_to_shift_register.i  SPI_TX_to_shift_register.s  STM32L432KC.elf  STM32L432KC.hex  STM32L432KC.list  STM32L432KC.map  UART_DMA.i  UART_DMA.s  UART_echo.i  UART_echo.s  adc.i  adc.s  blinking_led.i  blinking_led.s  control_led_brightness.i  control_led_brightness.s  control_led_with_interrupt.i  control_led_with_interrupt.s  cwt.i  cwt.s  diskio.i  diskio.s  exti.i  exti.s  ff.i  ff.s  ffsystem.i  ffsystem.s  ffunicode.i  ffunicode.s  (+38 more)
Debug/Application/SDCard/: code.d  fatfs.d  fatfs.su  fatfs_sd.cyclo  fatfs_sd.d  fatfs_sd.su  sd_driver.cyclo  sd_driver.d  sd_driver.su  subdir.mk  user_diskio.cyclo  user_diskio.d  user_diskio.su  user_diskio_spi.cyclo  user_diskio_spi.d  user_diskio_spi.i  user_diskio_spi.s  user_diskio_spi.su
Debug/Application/Wavelet_Analysis/Src/: cwt.cyclo  cwt.d  cwt.i  cwt.s  cwt.su  scales.cyclo  scales.d  scales.i  scales.s  scales.su  signals.cyclo  signals.d  signals.i  signals.s  signals.su  subdir.mk  wavelet.cyclo  wavelet.d  wavelet.i  wavelet.s  wavelet.su
Debug/Core/Src/: Blinking_HW_Delay.d  Blinking_HW_Delay.i  Blinking_HW_Delay.s  Blinking_TIM_delay.d  Blinking_TIM_delay.i  Blinking_TIM_delay.s  DANIEL_MANDA_Y.d  DANIEL_MANDA_Y.i  DANIEL_MANDA_Y.s  RX_data_with_interrupts.d  RX_data_with_interrupts.i  RX_data_with_interrupts.s  SD_writing.cyclo  SD_writing.d  SD_writing.i  SD_writing.s  SD_writing.su  SPI_TX_to_shift_register.d  SPI_TX_to_shift_register.i  SPI_TX_to_shift_register.s  UART_DMA.cyclo  UART_DMA.d  UART_DMA.i  UART_DMA.s  UART_DMA.su  UART_echo.d  UART_echo.i  UART_echo.s  blinking_led.d  blinking_led.i  blinking_led.s  control_led_brightness.cyclo  control_led_brightness.d  control_led_brightness.i  control_led_brightness.s  control_led_brightness.su  control_led_with_interrupt.d  control_led_with_interrupt.i  control_led_with_interrupt.s  cwt_probe.cyclo  (+43 more)
Debug/Middleware/FatFs/: diskio.cyclo  diskio.d  diskio.i  diskio.s  diskio.su  ff.cyclo  ff.d  ff.i  ff.s  ff.su  ff_gen_drv.d  ff_gen_drv.su  ffsystem.d  ffsystem.i  ffsystem.s  ffunicode.cyclo  ffunicode.d  ffunicode.i  ffunicode.s  ffunicode.su  subdir.mk
Debug/Middleware/FatFs/option/: ccsbcs.d  ccsbcs.su  subdir.mk  syscall.d
Debug/Peripherals/Src/: adc.cyclo  adc.d  adc.i  adc.s  adc.su  exti.cyclo  exti.d  exti.i  exti.s  exti.su  gpio.cyclo  gpio.d  gpio.i  gpio.s  gpio.su  rcc.cyclo  rcc.d  rcc.i  rcc.s  rcc.su  spi.cyclo  spi.d  spi.i  spi.s  spi.su  subdir.mk  tim.cyclo  tim.d  tim.i  tim.s  tim.su  uart.cyclo  uart.d  uart.i  uart.s  uart.su
Debug/Startup/: subdir.mk
Debug/drivers/Src/: stm32l432xx_gpio_driver.cyclo  stm32l432xx_gpio_driver.d  stm32l432xx_gpio_driver.su  subdir.mk
Middleware/FatFs/: diskio.c  ff.c  ffconf.h
Peripherals/Inc/: adc.h  gpio.h  rcc.h  spi.h  tim.h  uart.h
Peripherals/Src/: adc.c  gpio.c  rcc.c  spi.c  tim.c  uart.c
Release/: makefile  objects.list
Release/Core/Src/: main.d  subdir.mk  system_stm32l4xx.d
Release/Peripherals/Src/: adc.d  exti.d  gpio.d  rcc.d  subdir.mk
Release/Startup/: subdir.mk
